--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/main.css">
     <script defer src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script defer src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
     <script defer src="js/plugin.js"></script>
     <script defer src="js/script.js"></script>
 </head>
@@ -22,6 +23,7 @@
         <div class="container header__container">
             <img src="img/logo-header.png" alt="" width="187" height="70" class="header__logo">
             <nav class="header__nav nav">
+                <button class="header__close"></button>
                 <ul class="nav__list">
                     <li class="nav__item"><a href="#about" class="nav__link">О проекте</a></li>
                     <li class="nav__item"><a href="#tracks" class="nav__link">Трассы</a></li>
@@ -31,8 +33,9 @@
                     <li class="nav__item"><a href="#questions" class="nav__link">Вопрос-ответ</a></li>
                     <li class="nav__item"><a href="#location" class="nav__link">Как нас найти?</a></li>
                 </ul>
+                <button class="btn header__btn">Записаться</button>
             </nav>
-            <button class="btn header__btn">Записаться</button>
+            <button class="header__burger"></button>
         </div>
     </header>
 
@@ -132,23 +135,29 @@
                             </p>
                         </div>
                         <div class="tracks__buttons">
-                            <button class="tracks__prev"></button>
-                            <button class="tracks__next"></button>
+                            <button class="tracks__prev">
+                                <img src="img/arrow-right.svg" alt="" width="19" height="20">
+                            </button>
+                            <button class="tracks__next">
+                                <img src="img/arrow-right.svg" alt="" width="19" height="20">
+                            </button>
                         </div>
                     </div>
-                    <div class="tracks__slider swiper-container">
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide">
-                                <img src="img/tracks1.png" alt="" width="580" height="350" class="tracks__photo">
-                            </div>
-                            <div class="swiper-slide">
-                                <img src="img/tracks2.png" alt="" width="580" height="350" class="tracks__photo">
-                            </div>
-                            <div class="swiper-slide">
-                                <img src="img/tracks1.png" alt="" width="580" height="350" class="tracks__photo">
-                            </div>
-                            <div class="swiper-slide">
-                                <img src="img/tracks2.png" alt="" width="580" height="350" class="tracks__photo">
+                    <div class="tracks__slider-container">
+                        <div class="tracks__slider swiper-container">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <img src="img/tracks1.png" alt="" width="580" height="350" class="tracks__photo">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="img/tracks2.png" alt="" width="580" height="350" class="tracks__photo">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="img/tracks1.png" alt="" width="580" height="350" class="tracks__photo">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="img/tracks2.png" alt="" width="580" height="350" class="tracks__photo">
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -327,6 +336,8 @@
                         <img src="img/arrow-down.svg" alt="" width="16" height="16" class="rating__arrow">
                     </div>
                 </form>
+            </div>
+            <div class="container table-container">
                 <table class="rating__table table">
                     <thead>
                         <tr class="table__header">
@@ -558,13 +569,90 @@
                             </div>
                         </li>
                     </ul>
+                    <div class="questions__images mobile">
+                        <img src="img/questions2.png" alt="" width="580" height="227" class="questions__photo">
+                    </div>
                 </div>
+            </div>
+        </section>
+
+        <section class="location" id="location">
+            <div class="container">
+                <h2 class="title location__title">Где мы находимся?</h2>
+                <ul class="location__list">
+                    <li class="location__item">
+                        <div class="location__wrapper">
+                            <img src="img/place.svg" alt="" width="24" height="25" class="location__img">
+                            <div class="location__block">
+                                <p class="location__text">
+                                    Strateg atlitics. 
+                                </p>
+                                <p class="location__text">
+                                    г. Сыктывкар, ул. Морозова, д. 153
+                                </p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="location__item">
+                        <div class="location__wrapper">
+                            <img src="img/phone.svg" alt="" width="25" height="25" class="location__img">
+                            <div class="location__block">
+                                <a href="tel:88005378745" class="location__text">8 (800) 537 87 45</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="location__item">
+                        <div class="location__wrapper">
+                            <img src="img/mail.svg" alt="" width="25" height="25" class="location__img">
+                            <div class="location__block">
+                                <a href="mailto:strateg@mail.ru" class="location__text">strateg@mail.ru</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="location__item">
+                        <div class="location__wrapper wrapper-media">
+                            <a href="#" class="location__vk"></a>
+                            <a href="#" class="location__tg"></a>
+                            <a href="#" class="location__inst"></a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="container location__container">
+                <div id="location__map" class="location__map"></div>
             </div>
         </section>
     </main>
 
     <footer class="footer" id="footer">
         <div class="container footer__container">
+            <div class="footer__image">
+                <img src="img/logo-footer.png" alt="" width="180" height="70" class="footer__logo">
+            </div>
+            <div class="footer__block">
+                <div class="footer__column column-left">
+                    <a href="#" class="footer__link">О проекте</a>
+                    <a href="#" class="footer__link">Трассы</a>
+                    <a href="#" class="footer__link">Тарифы</a>
+                    <a href="#" class="footer__link">Новости</a>
+                    <a href="#" class="footer__link">Рейтинг</a>
+                    <a href="#" class="footer__link">Вопрос-ответ</a>
+                    <a href="#" class="footer__link">Как нас найти?</a>
+                </div>
+                <div class="footer__wrapper">
+                    <div class="footer__column column-center">
+                        <a href="#" class="footer__link">Стать партнёром</a>
+                        <a href="#" class="footer__link">Вакансии</a>
+                    </div>
+                    <div class="footer__column column-right">
+                        <a href="#" class="footer__link">Информировать о новостях</a>
+                        <form action="#" class="footer__form">
+                            <input type="email" name="email" placeholder="Электронная почта" class="footer__input">
+                            <button class="btn footer__submit">Подписаться на рассылку</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
     </footer>
 </body>
