--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                 <div class="news__wrapper">
                     <div class="news__card">
                         <div class="news__visual" style="background-image: url('img/news1.png');">
-                            <a href="#" class="news__link"></a>
+                            <a href="/pages/news.html" class="news__link"></a>
                         </div>
                         <div class="news__info">
                             <h3 class="text news__name">Название новости</h3>
@@ -254,7 +254,7 @@
                     </div>
                     <div class="news__card full">
                         <div class="news__visual" style="background-image: url('img/news2.png');">
-                            <a href="#" class="news__link"></a>
+                            <a href="/pages/news.html" class="news__link"></a>
                         </div>
                         <div class="news__info">
                             <h3 class="text news__name">Название новости</h3>
@@ -266,7 +266,7 @@
                     </div>
                     <div class="news__card">
                         <div class="news__visual" style="background-image: url('img/news3.png');">
-                            <a href="#" class="news__link"></a>
+                            <a href="/pages/news.html" class="news__link"></a>
                         </div>
                         <div class="news__info">
                             <h3 class="text news__name">Название новости</h3>
@@ -277,7 +277,7 @@
                     </div>
                     <div class="news__card">
                         <div class="news__visual" style="background-image: url('img/news4.png');">
-                            <a href="#" class="news__link"></a>
+                            <a href="/pages/news.html" class="news__link"></a>
                         </div>
                         <div class="news__info">
                             <h3 class="text news__name">Название новости</h3>
@@ -288,7 +288,7 @@
                     </div>
                     <div class="news__card">
                         <div class="news__visual" style="background-image: url('img/news5.png');">
-                            <a href="#" class="news__link"></a>
+                            <a href="/pages/news.html" class="news__link"></a>
                         </div>
                         <div class="news__info">
                             <h3 class="text news__name">Название новости</h3>
