admin page complete

--- a/index.html
+++ b/index.html
@@ -180,7 +180,9 @@
                             </div>
                             <div class="rates__info">
                                 <p class="rates__price">700 руб</p>
-                                <button class="btn rates__btn">Хочу участвовать</button>
+                                <div class="rates__buttons">
+                                    <button class="btn rates__btn">Хочу участвовать</button>
+                                </div>
                             </div>
                         </div>
                         <div class="rates__card">
@@ -191,7 +193,9 @@
                             </div>
                             <div class="rates__info">
                                 <p class="rates__price">700 руб</p>
-                                <button class="btn rates__btn">Хочу участвовать</button>
+                                <div class="rates__buttons">
+                                    <button class="btn rates__btn">Хочу участвовать</button>
+                                </div>
                             </div>
                         </div>
                         <div class="rates__card">
@@ -202,7 +206,9 @@
                             </div>
                             <div class="rates__info">
                                 <p class="rates__price">700 руб</p>
-                                <button class="btn rates__btn">Хочу участвовать</button>
+                                <div class="rates__buttons">
+                                    <button class="btn rates__btn">Хочу участвовать</button>
+                                </div>
                             </div>
                         </div>
                         <div class="rates__card">
@@ -213,7 +219,9 @@
                             </div>
                             <div class="rates__info">
                                 <p class="rates__price">700 руб</p>
-                                <button class="btn rates__btn">Хочу участвовать</button>
+                                <div class="rates__buttons">
+                                    <button class="btn rates__btn">Хочу участвовать</button>
+                                </div>
                             </div>
                         </div>
                         <div class="rates__card">
@@ -224,7 +232,9 @@
                             </div>
                             <div class="rates__info">
                                 <p class="rates__price">700 руб</p>
-                                <button class="btn rates__btn">Хочу участвовать</button>
+                                <div class="rates__buttons">
+                                    <button class="btn rates__btn">Хочу участвовать</button>
+                                </div>
                             </div>
                         </div>
                     </div>
